<resources>
    <string name="app_name">Shop App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_developer">Developer</string>
    <string name="or">OR</string>

    <string name="home_second">Home Second</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="tvCreateAccount">Create a new Account!</string>
    <string name="tvSilahkan">Silahkan login untuk memakai Aplikasi</string>
    <string name="img_logo">Logo</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forget Password</string>
    <string name="etEmail">Email</string>
    <string name="etPhoneNumber">Phone Number</string>
    <string name="etFullName">Nama Lengkap</string>
    <string name="have_account">Have Account</string>
    <string name="tvSignIn">Sign In</string>
    <string name="email">Email</string>
</resources>
