<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="19.7dp"
            android:contentDescription="@string/img_logo"
            android:src="@drawable/logotext" />

        <Button
            android:id="@+id/login_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_facebook" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_fb"
            android:layout_centerInParent="true"
            android:padding="8dp"
            android:text="@string/or"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/or"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#100b20"
                android:textColorHint="#a9aaac">

                <EditText
                    android:id="@+id/etusername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="46dp"
                    android:layout_marginRight="46dp"
                    android:autofillHints="@string/hint_username"
                    android:background="#0000"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="16dp"
                    android:hint="@string/hint_username"
                    android:inputType="textPersonName"
                    android:padding="14dp"
                    android:textColor="#404547"
                    android:textColorHint="#76818a"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#100b20"
                android:textColorHint="#a9aaac"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="46dp"
                    android:layout_marginRight="46dp"
                    android:autofillHints="@string/hint_password"
                    android:background="#0000"
                    android:drawableStart="@drawable/ic_pass"
                    android:drawablePadding="16dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="14dp"
                    android:textColor="#404547"
                    android:textColorHint="#76818a"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="56dp"
                android:layout_marginBottom="20dp"
                android:gravity="end"
                android:text="@string/forgot_password" />

        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_signin" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tv01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvCreateAccount" />

            <TextView
                android:id="@+id/tvregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tv01"
                android:text="@string/register"
                android:textColor="#D81B60" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>